# thalassa-server

./: Makefile  README.md  config.yml  pyproject.toml  run.py
requirements/: requirements-dev.txt  requirements.txt
seareport_server/: ui.py
thalassa_server/: notify.py  ui.py
